fixing navigation alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3698,7 +3698,6 @@ input, select, textarea {
 
 			ul {
 				list-style:none;
-				text-align: left;
 			} 
 
 			li{
